created an image entity in the movie facory
